--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,8 @@
     "jsx": "react",
     "moduleResolution": "node",
     "paths": {
-      "@/*": ["./*"]
+      "@/*": ["./*"],
+      "@firebase/auth": ["./node_modules/@firebase/auth/dist/index.rn.d.ts"]
     },
     "esModuleInterop": true,
     "skipLibCheck": true
